# k1

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .npmrc  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  BUILD.bazel  CODE_OF_CONDUCT.md  DESIGN.md  MODULE.bazel  README.md  book.toml  buf.yaml  flake.nix  go.work  go.work.sum  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.sh
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
.github/: CODEOWNERS
.zed/: settings.json
backend/apis/: go.mod
backend/app/admin/manager/: BUILD.bazel  go.mod
backend/app/admin/manager/application/: BUILD.bazel
backend/app/admin/manager/cmd/: main.go  wire.go
backend/app/admin/manager/infra/: BUILD.bazel
backend/app/admin/manager/rest/: BUILD.bazel
backend/app/admin/member/: go.mod
backend/app/admin/member/cmd/: BUILD.bazel  main.go
backend/app/api/account/cmd/: BUILD.bazel  main.go
backend/app/apiserver/account/: go.mod
backend/app/gateway/cmd/: main.go
backend/app/service/account/: go.mod  sqlc.yaml
backend/app/service/account/application/: BUILD.bazel
backend/app/service/account/cmd/: BUILD.bazel
backend/app/service/account/infra/: BUILD.bazel
backend/app/service/account/rpc/: BUILD.bazel  provider.go  rpc.go
backend/app/service/agentic/cmd/: BUILD.bazel  main.go
backend/app/service/member/: go.mod
backend/app/service/member/application/: BUILD.bazel
backend/app/service/member/cmd/: BUILD.bazel  main.go  wire.go
backend/app/service/member/infra/: BUILD.bazel
backend/app/service/member/rpc/: BUILD.bazel
backend/kapis/: go.mod
backend/kapis/test/v1/: BUILD.bazel  test.proto
backend/kapis/test2/v1/: BUILD.bazel  test2.proto
deploy/kustomize/base/: deployment.yaml
docs/: BUILD.bazel  SUMMARY.md
frontend/apis/: package.json
frontend/app/admin/: .env  README.md  global.d.ts  next.config.ts  package.json  tsconfig.json
frontend/app/admin/app/: globals.css  layout.tsx
frontend/app/admin/app/(foundation)/: layout.tsx
frontend/app/admin/app/(layout)/: layout.tsx
frontend/app/admin/app/agentic/: layout.tsx
frontend/app/admin/app/signin/: page.tsx
frontend/app/admin/components/biz/: nav-main.tsx  nav-projects.tsx  nav-secondary.tsx  nav-user.tsx
frontend/app/admin/components/client/: header.tsx  session.tsx
frontend/app/admin/locales/: en.json  zh-CN.json
frontend/app/admin/pages/: .gitkeep
frontend/app/miniApp/: babel.config.json  global.d.ts  package.json  project.config.json  tsconfig.json
frontend/app/miniApp/config/: dev.ts  index.ts  prod.ts
frontend/app/miniApp/src/: app.config.ts  app.ts
frontend/app/nativeApp/: app.json  package.json
frontend/app/nativeApp/src/: global.css
frontend/app/webApp/: README.md  global.d.ts  package.json  proxy.ts
frontend/app/webApp/app/: layout.tsx
frontend/kapis/: package.json
infra/: README.md
infra/aws/: main.go
script/: setup.sh
scripts/: BUILD.bazel  setup.sh
tools/: BUILD.bazel  go.mod  tools.json
(+49 files in other folders)
