module(
    name = "kairo",
    version = "1.0.0",
)

bazel_dep(
    name = "rules_go",
    version = "0.61.1",
)
bazel_dep(
    name = "gazelle",
    version = "0.51.3",
)

go_sdk = use_extension(
    "@rules_go//go:extensions.bzl",
    "go_sdk",
)
go_sdk.download(
    version = "1.26.1",
)

go_deps = use_extension(
    "@gazelle//:extensions.bzl",
    "go_deps",
)
go_deps.from_file(
    go_work = "//:go.work",
)
use_repo(
    go_deps,
    "com_github_go_logr_logr",
    "com_github_go_logr_zapr",
    "com_github_google_wire",
    "com_github_spf13_viper",
    "com_github_spf13_viper_remote",
    "io_etcd_go_etcd_client_v3",
    "org_golang_google_grpc",
    "org_uber_go_zap",
)
