load("@rules_img//img:image.bzl", "image_manifest")
load("@rules_img//img:layer.bzl", "image_layer")
load("@rules_img//img:load.bzl", "image_load")
load("@rules_img//img:push.bzl", "image_push")

image_layer(
    name = "go_layer",
    srcs = {
        "/bin/app": "//cmd:app",
    },
)

image_manifest(
    name = "go_image",
    base = "@ubuntu",
    entrypoint = ["/bin/app"],
    layers = [
        ":go_layer",
    ],
)

image_push(
    name = "push",
    image = ":go_image",
    registry = "ghcr.io",
    repository = "malt3/rules_img/go",
    tag = "native",
    visibility = ["//:__pkg__"],
)

image_load(
    name = "load",
    image = ":go_image",
    tag = "1.0.0",
    visibility = ["//:__pkg__"],
)

filegroup(
    name = "oci_layout",
    srcs = [":go_image"],
    output_group = "oci_layout",
)

filegroup(
    name = "oci_tarball",
    srcs = [":go_image"],
    output_group = "oci_tarball",
)

filegroup(
    name = "docker_tarball",
    srcs = [":load"],
    output_group = "tarball",
)
