load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_buf//buf:defs.bzl", "buf_lint_test")

proto_library(
    name = "v1_proto",
    srcs = ["test2.proto"],
    strip_import_prefix = "/backend/kapis",
    visibility = ["//visibility:public"],
)

buf_lint_test(
    name = "v1_proto_lint",
    config = "//:buf.yaml",
    module = "backend/kapis",
    targets = [":v1_proto"],
)
